@@ -49,7 +49,7 @@ namespace IndexerLib
             sbHtmlIndex.AppendLine(HtmlHelper.StartTag("body"));
             string index = base.Index(folderPath).Trim();
             sbHtmlIndex.AppendLine(index);
-            sbHtmlIndex.AppendLine(HtmlHelper.StartTag("div") + GetFooter() + HtmlHelper.EndTag("div"));
+            if (config.AddFooter) sbHtmlIndex.AppendLine(HtmlHelper.StartTag("div") + GetFooter() + HtmlHelper.EndTag("div"));
             if (config.AddValidationIcons) sbHtmlIndex.AppendLine(Resources.valid_xhtml);
             sbHtmlIndex.AppendLine(HtmlHelper.EndTag("body"));
             sbHtmlIndex.AppendLine(HtmlHelper.EndTag("html"));
